# esp32-8048s043-clock

./: .gitignore  CLAUDE.md  partitions.csv  platformio.ini  sdkconfig.defaults
src/: CMakeLists.txt  ancs_client.cpp  ancs_client.h  app_icons_data.c  app_icons_data.h  app_settings.cpp  app_settings.h  background_screen.cpp  background_screen.h  background_settings.cpp  background_settings.h  bulb_icon_data.c  bulb_icon_data.h  config.h  dimmer_screen.cpp  dimmer_screen.h  dimmer_settings.cpp  dimmer_settings.h  es_fonts.h  forecast_screen.cpp  forecast_screen.h  geolocation.cpp  geolocation.h  lcd.cpp  lcd.h  lv_font_montserrat_16_es.c  lv_font_montserrat_20_es.c  main.cpp  notification_filter_screen.cpp  notification_filter_screen.h  notification_filter_settings.cpp  notification_filter_settings.h  notification_icon.cpp  notification_icon.h  notification_screen.cpp  notification_screen.h  notification_store.cpp  notification_store.h  photo_slideshow_screen.cpp  photo_slideshow_screen.h  (+26 more)
tools/: convert_photos.py
